--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "axios": "^1.7.9",
         "react": "^19.0.0",
+        "react-datepicker": "^8.1.0",
         "react-dom": "^19.0.0",
         "vite": "^6.1.0"
     },
