--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,9 +9,11 @@
     },
     "dependencies": {
         "axios": "^1.7.9",
+        "date-fns": "^4.1.0",
         "react": "^19.0.0",
         "react-datepicker": "^8.1.0",
         "react-dom": "^19.0.0",
+        "react-router-dom": "^7.2.0",
         "vite": "^6.1.0"
     },
     "devDependencies": {
