--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "axios": "^1.7.9",
         "date-fns": "^4.1.0",
+        "jwt-decode": "^3.1.2",
         "react": "^19.0.0",
         "react-datepicker": "^8.1.0",
         "react-dom": "^19.0.0",
