--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
+    "multer": "^1.4.5-lts.1",
     "winston": "^3.17.0"
   }
 }
