--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.10.1",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.11",
     "winston": "^3.17.0"
   }
 }
