--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^8.10.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.11",
+    "tesseract.js": "^7.0.0",
     "winston": "^3.17.0"
   }
 }
